# BumbleBee_vSLAM

./: CMakeLists.txt  README.md
Scripts/: SingleShot.sh
cmake/: FindDC1394.cmake~  FindIsoTransform.cmake
include/Analysis/: SimpleFeedback.hpp  StereoDrawing.hpp  StereoRectifiedFeedback.hpp
include/Calibration/: Calibrator.hpp  SingleCalibrator.hpp  SingleConfig.hpp  SingleOutput.hpp  StereoCalibrator.hpp  StereoConfig.hpp  StereoOutput.hpp
include/DataStructures/CameraInfo/: Single.hpp  Stereo.hpp  StereoRect.hpp
include/DataStructures/DataSet/: BumbleDataSet.hpp  BumbleFrame.hpp  ImageMetaData.hpp
include/DataStructures/OutputData/: ImageDetections.hpp  OutputData.hpp  SalientFeature.hpp  StereoFrame.hpp  StereoFrameStats.hpp  StereoKP.hpp
include/DataStructures/Transforms/: Isometry.hpp
include/FrontEnd/Detect/: Detect.hpp  FastSettings.hpp
include/FrontEnd/Detection/: BRISKdet.hpp  DetSettings.hpp  Detection.hpp
include/FrontEnd/StereoFeatures/: StereoFeatures.hpp  StereoInternal.hpp  StereoRectifiedFeatures.hpp  StereoRectifiedInternal.hpp
include/FrontEnd/Window/: SlidingWindow.hpp  WindowInternal.hpp
include/Manager/: CopyManager.hpp  FWmanager.hpp  FireWireManager.hpp  FireWireSettings.hpp  Frame.hpp  PsuedoManager.hpp  VideoManager.hpp  VideoManager.hpp~
include/VidStream/: FireWire.hpp  FireWireSettings.hpp  PointGrey.hpp  RecordingSettings.hpp
src/: CMakeLists.txt  CMakeLists.txt~
src/Analysis/: CMakeLists.txt  SimpleFeedback.cpp  StereoDrawing.cpp  StereoRectifiedFeedback.cpp
src/Calibration/: CMakeLists.txt  CMakeLists.txt~  Calibrator.cpp  SingleCalibrator.cpp  SingleConfig.cpp  SingleOutput.cpp  StereoCalibrator.cpp  StereoConfig.cpp  StereoOutput.cpp
src/DataStructures/: CMakeLists.txt  CMakeLists.txt~
src/DataStructures/CameraInfo/: Single.cpp  Stereo.cpp  StereoRect.cpp
src/DataStructures/DataSet/: BumbleDataSet.cpp  BumbleFrame.cpp  ImageMetaData.cpp
src/DataStructures/OutputData/: ImageDetections.cpp  SalientFeature.cpp  StereoFrame.cpp  StereoFrameStats.cpp  StereoKP.cpp
src/DataStructures/Transforms/: Isometry.cpp
src/FrontEnd/: CMakeLists.txt
src/FrontEnd/Detect/: Detect.cpp  FastSettings.cpp
src/FrontEnd/Detection/: BRISKdet.cpp  DetSettings.cpp
src/FrontEnd/StereoFeatures/: StereoFeatures.cpp  StereoInternal.cpp  StereoRectifiedFeatures.cpp  StereoRectifiedInternal.cpp
src/FrontEnd/Window/: SlidingWindow.cpp  WindowInternal.cpp
src/Manager/: .FireWireManager.cpp.kate-swp  CMakeLists.txt  CMakeLists.txt~  FWmanager.cpp  FireWireManager.cpp  FireWireSettings.cpp  Frame.cpp  PsuedoManager.cpp  VideoManager.cpp
src/Tests/: CMakeLists.txt  CMakeLists.txt~
src/Tests/Analysis/: CMakeLists.txt  Stereoeval.cpp
src/Tests/Calibration/: .CalFF.cpp.kate-swp  CMakeLists.txt  CMakeLists.txt~  CalFF.cpp  SingleCameraFF.cpp  StereoFF.cpp  genCalibrationInput.cpp  genStereoCalibrationInput.cpp
src/Tests/DataStructures/: CMakeLists.txt  OverallTest.cpp  streamTest.cpp
src/Tests/FrontEnd/: BRISK_BRIEF_BRUTE.cpp  CMakeLists.txt  sequence.cpp  simpleDetect.cpp
src/Tests/GenerateDefaults/: CMakeLists.txt  genRecordingSettings.cpp
src/Tests/Manager/: CMakeLists.txt  OutputSettings.cpp  RecordLog.cpp  SingleDetect.cpp  loadFromFile.cpp
src/Tests/VidStream/: CMakeLists.txt  CreateDataSet.cpp  SaveCalibrationImages.cpp  Scan.cpp  SingleShot.cpp  Stream.cpp  makeFireWireSettings.cpp
src/VidStream/: CMakeLists.txt  FireWire.cpp  FireWireSettings.cpp  PointGrey.cpp  RecordingSettings.cpp
